<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SettingsFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/weatherback">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A9061927">

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/shape"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:paddingStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape"
                    android:id="@+id/radioGroupLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/txtLocation"
                    app:layout_constraintTop_toBottomOf="@id/txtLocation"
                    tools:ignore="RtlSymmetry">

                    <RadioButton
                        android:id="@+id/radioGps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/gps"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radioMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/map"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </RadioGroup>


                <TextView
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/shape"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/language"
                    android:id="@+id/txtLang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/radioGroupLocation"
                    app:layout_constraintStart_toStartOf="@id/txtLocation" />


                <RadioGroup
                    android:paddingStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape"
                    android:id="@+id/radioGroupLang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/radioGroupLocation"
                    app:layout_constraintTop_toBottomOf="@id/txtLang"
                    tools:ignore="RtlSymmetry">

                    <RadioButton
                        android:id="@+id/radioArab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/arabic"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radioEng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/english"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </RadioGroup>


                <TextView
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/shape"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/temprature"
                    android:id="@+id/txtTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/radioGroupLang"
                    app:layout_constraintStart_toStartOf="@id/txtLang" />

                <RadioGroup
                    android:paddingStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape"
                    android:id="@+id/radioGroupTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/radioGroupLang"
                    app:layout_constraintTop_toBottomOf="@id/txtTemp"
                    tools:ignore="RtlSymmetry">

                    <RadioButton
                        android:id="@+id/radioCelsuis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/temp_celsius_radioBtn"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radioKelvin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/temp_kelvin_radioBtn"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radioFahrenit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/temp_fahrenheit_radioBtn"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </RadioGroup>

                <TextView
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/shape"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/wind_speed"
                    android:id="@+id/txtWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/radioGroupTemp"
                    app:layout_constraintStart_toStartOf="@id/txtTemp" />

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape"
                    android:paddingStart="15dp"
                    android:id="@+id/radioGroupWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/radioGroupTemp"
                    app:layout_constraintTop_toBottomOf="@id/txtWindSpeed"
                    tools:ignore="RtlSymmetry">

                    <RadioButton
                        android:id="@+id/radioMeter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/meter_radioBtn"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/radioMile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/mile_radioBtn"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </RadioGroup>

                <Button
                    android:id="@+id/btnSubmit"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/shape"
                    android:text="@string/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/radioGroupWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Button>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>