<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A9061927"
    >

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/shape"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:text="@string/location"
         />

    <RadioGroup
        android:paddingStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape"
        android:id="@+id/radioGroupLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txtLocation"
        app:layout_constraintTop_toBottomOf="@id/txtLocation"
        >

        <RadioButton
            android:id="@+id/radioGps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/gps"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radioMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RadioGroup>
    <Button
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:background="@drawable/shape"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLocation"
        app:layout_constraintStart_toStartOf="@id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>