<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#A9061927"
    >

    <TextView
        android:id="@+id/txtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:paddingStart="40dp"
        android:paddingTop="5dp"
        android:paddingEnd="40dp"
        android:paddingBottom="5dp"
        android:text="@string/from"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
       app:layout_constraintStart_toEndOf="@id/txtFrom"
        app:layout_constraintTop_toTopOf="@id/txtFrom"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/white"
        android:background="@drawable/shape"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/txtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/shape"
        app:layout_constraintTop_toBottomOf="@id/txtFrom"
        app:layout_constraintStart_toStartOf="@id/txtFrom"
        app:layout_constraintEnd_toEndOf="@id/txtFrom"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/txtDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/shape"
        app:layout_constraintTop_toBottomOf="@id/txtEnd"
        app:layout_constraintStart_toStartOf="@id/txtEnd"
        app:layout_constraintEnd_toEndOf="@id/txtEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/txtDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/shape"
        app:layout_constraintTop_toBottomOf="@id/txtDateFrom"
        app:layout_constraintStart_toEndOf="@id/txtDateFrom"
        app:layout_constraintEnd_toStartOf="@id/txtDateEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/shape"
        app:layout_constraintTop_toBottomOf="@id/txtTime"
        app:layout_constraintStart_toStartOf="@id/txtTime"
        app:layout_constraintEnd_toEndOf="@id/txtTime"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:id="@+id/txtHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        />

    <Button
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:background="@drawable/shape"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHour"
        app:layout_constraintStart_toEndOf="@id/txtHour"
        app:layout_constraintEnd_toStartOf="@id/txtHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>