<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weatherback"
        tools:context=".view.activity.FavouriteDetailsActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A9061927">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@id/constraint"
                    app:layout_constraintStart_toStartOf="@id/constraint"
                    app:layout_constraintTop_toTopOf="@id/constraint" />


                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/txtLocation"
                    app:layout_constraintStart_toStartOf="@id/txtLocation"
                    app:layout_constraintTop_toBottomOf="@id/txtLocation" />

                <include
                    android:id="@+id/cardview"
                    layout="@layout/iteam_weather_current"
                    app:layout_constraintTop_toBottomOf="@id/txtDate"
                    app:layout_constraintEnd_toEndOf="@id/constraint"
                    app:layout_constraintStart_toStartOf="@id/constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </include>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/txtHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="@id/cardview"
                    app:layout_constraintStart_toStartOf="@id/cardview"
                    app:layout_constraintTop_toBottomOf="@id/cardview">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_hours"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="@id/constraint"
                    app:layout_constraintTop_toBottomOf="@id/txtHours"
                    app:layout_constraintEnd_toEndOf="@id/cardview"
                    tools:listitem="@layout/item_weather_hour">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:textColor="@color/white"
                    android:id="@+id/txtDays"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/days"
                    app:layout_constraintEnd_toEndOf="@id/cardview"
                    app:layout_constraintStart_toStartOf="@id/cardview"
                    app:layout_constraintTop_toBottomOf="@id/recycler_hours" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_days"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="@id/cardview"
                    app:layout_constraintTop_toBottomOf="@id/txtDays"
                    app:layout_constraintEnd_toEndOf="@id/cardview"
                    tools:listitem="@layout/iteam_weather_day">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>